--- a/app/assets/javascripts/templates/newBookForm.hbs
+++ b/app/assets/javascripts/templates/newBookForm.hbs
@@ -1,7 +1,7 @@
-
+<div class="form-title">
 <h3>Create a Book</h3>
-
 <p class="remember">All fields but 'title' and 'condition' are optional, but the more fields added, the better the chance of trading a book</p><br />
+</div>
 
   <div class="centerbox">
     <div class="field">
@@ -36,8 +36,7 @@
 
     <div class="text_area">
       <label for="book_description">Description</label><br />
-      <textarea name="book[description]" id="book_description" cols="50">
-      </textarea>
+      <textarea name="book[description]" id="book_description" cols="50"></textarea>
     </div>
 
     <b>Genre(s): </b>
