--- a/app/assets/javascripts/templates/allUsersTemplate.hbs
+++ b/app/assets/javascripts/templates/allUsersTemplate.hbs
@@ -1,5 +1,5 @@
 <div class="section-title">
-  <h1>All of LibbyLibby's Users:</h1>
+  <h2>All of libbylibby's Users:</h2>
 </div>
 <div class="section-info">
 {{#each data.users}}
