--- a/app/assets/javascripts/templates/showBookTemplate.hbs
+++ b/app/assets/javascripts/templates/showBookTemplate.hbs
@@ -17,13 +17,13 @@
   <p class='boxframe-desc'>{{book.description}}</p>
 
 
-  {{#unless trade}}
+  {{#unless trade}}<!-- first option occurs when user view own book -->
     <button type="button" class="btn btn-primary btn-xs" data-user={{book.user_id}} data-book={{book.id}} id="edit-book-btn">Edit This Book</button>
     <button type="button" class="btn btn-primary btn-xs" data-user={{book.user_id}} data-book={{book.id}} id="delete-book-btn" onclick = "return confirm('are you sure?')">Delete This Book</button>
   {{else if trade.id}}<!-- trade to be completed -->
     <div class='boxframe-subj' id='trader1-rating'>Trader's Rating: {{other_trader_rating}} out of 3 (3 is best)
     </div><br>
-    <button type="button" class="btn btn-primary btn-xs complete-trade-btn" data-trader2={{trade.d}} data-trade={{trade.id}} data-book={{book.id}} >Complete a Trade</button>
+    <button type="button" class="btn btn-primary btn-xs complete-trade-btn" data-trade={{trade.id}} data-book={{book.id}} >Complete a Trade</button>
   {{else}} <! trade to be initialized -->
     <div class='boxframe-subj' id='trader2-rating'>Trader's Rating: {{other_trader_rating}} out of 3 (3 is best) 
     </div><br>
