--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,7 +29,7 @@ body {
   background: #FFEEAC;
   font-family: $oxygen;
   font-size: 14px;
-  color: #555555;
+  color: #2F4F4F;
 }
 input[type='checkbox'] {
   margin-left: 20px;
