retooled book/trade association and trade templating

--- a/app/assets/javascripts/templates/myTradesTemplate.hbs
+++ b/app/assets/javascripts/templates/myTradesTemplate.hbs
@@ -56,7 +56,7 @@
           <input type="radio" value="2" name="user_review" id="user_review_2" /><br />
           <label for="user_rating_1">The book never arrived/was in awful condition</label>
           <input type="radio" value="1" name="user_review" id="user_review_1" /><br /><br />
-          <button class="rate-trader2-btn btn btn-primary btn-xs data-trade={{id}}">Rate This Trader</button> 
+          <button class="rate-trader2-btn btn btn-primary btn-xs" data-trade={{id}}>Rate This Trader</button> 
         </div>
         </div>
         {{/unless}} 
@@ -96,7 +96,7 @@
           <input type="radio" value="2" name="user_review" id="user_review_2" /><br />
           <label for="user_rating_1">The book never arrived/was in awful condition</label>
           <input type="radio" value="1" name="user_review" id="user_review_1" /><br />
-          <button class="rate-trader1-btn btn btn-primary btn-xs data-trade={{id}} ">Rate This Trader</button> 
+          <button class="rate-trader1-btn btn btn-primary btn-xs" data-trade={{id}}>Rate This Trader</button> 
         </div>
         </div>
         {{/unless}} 
