--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,7 +54,7 @@ input[type='checkbox'] {
   border-radius: 25px;
   padding-top: 5px;
   padding-bottom: 20px;
-  background: #96CEB4;
+  background: lightgreen;
 
   text-align: center;
   margin-left: 50px;
