--- a/app/assets/javascripts/templates/editBookForm.hbs
+++ b/app/assets/javascripts/templates/editBookForm.hbs
@@ -12,11 +12,11 @@
   </div>
   <div class="field">
     <label for="book_author_first_name">Author first name</label><br>
-    <input id="book_author_first_name" placeholder="{{book.author_first_name}}" type="text" name="book[author_first_name]" value="{{book.author_first_name}}">
+    <input id="book_author_first_name" placeholder="{{book.author_first_name}}" type="text" name="book[author_first_name]" value="">
   </div>
   <div class="field">
     <label for="book_ISBN">Isbn</label><br>
-    <input id="book_isbn" placeholder="{{book.isbn}}" name="book[isbn]" type="text" value="{{book.isbn}}">
+    <input id="book_isbn" placeholder="{{book.isbn}}" name="book[isbn]" type="text" value="">
   </div>
   <div class="radio_field">
     <p><strong>Condition</strong></p><label for="book_condition_like_new">Like New</label> <input id="book_condition_like_new" name="book_condition" type="radio" value="Like New"><br>
