corrected book update issue

--- a/app/assets/javascripts/templates/editBookForm.hbs
+++ b/app/assets/javascripts/templates/editBookForm.hbs
@@ -16,7 +16,7 @@
   </div>
   <div class="field">
     <label for="book_ISBN">Isbn</label><br>
-    <input id="book_isbn" placeholder="{{book.isbn}}" name="book[isbn]" type="text" value="">
+    <input id="book_isbn" placeholder="{{book.isbn}}" name="book[isbn]" type="text" value="{{book.isbn}}">
   </div>
   <div class="radio_field">
     <p><strong>Condition</strong></p><label for="book_condition_like_new">Like New</label> <input id="book_condition_like_new" name="book_condition" type="radio" value="Like New"><br>
