--- a/app/assets/javascripts/templates/editBookForm.hbs
+++ b/app/assets/javascripts/templates/editBookForm.hbs
@@ -4,15 +4,15 @@
 <div class="centerbox">
   <div class="field">
     <label for="book_title">Title</label><br>
-    <input id="book_title" placeholder="{{book.title}}" size="50" type="text" value="" name="book[title]">
+    <input id="book_title" placeholder="{{book.title}}" size="50" type="text" value="{{book.title}}"  name="book[title]">
   </div>
   <div class="field">
     <label for="book_author_last_name">Author last name</label><br>
-    <input id="book_author_last_name" placeholder="{{book.author_last_name}}" type="text" value="" name="author_last_name">
+    <input id="book_author_last_name" placeholder="{{book.author_last_name}}" type="text" value="{{book.author_last_name}}" name="book[author_last_name]">
   </div>
   <div class="field">
     <label for="book_author_first_name">Author first name</label><br>
-    <input id="book_author_first_name" placeholder="{{book.author_first_name}}" type="text" name="book[author_first_name]" value="">
+    <input id="book_author_first_name" placeholder="{{book.author_first_name}}" type="text" name="book[author_first_name]" value="{{book.author_first_name}}">
   </div>
   <div class="field">
     <label for="book_ISBN">Isbn</label><br>
