revised book edit form to update dynamically

--- a/app/assets/javascripts/templates/bookForm.hbs
+++ b/app/assets/javascripts/templates/bookForm.hbs
@@ -1,6 +1,8 @@
-<h3>Edit a Book</h3>
-<!--<form  action="/" id="edit-book">-->
+<div class="indent">
+<h4>To Edit This Book, Just Die, Fill In Field(s) and Click 'Update'</h4>
+<form  action="/" id="book-form">
 <p class="remember">All fields but 'title' and 'condition' are optional, but the more fields added, the better the chance of trading a book</p><br>
+</div>
 <div class="centerbox">
   <div class="field">
     <label for="book_title">Title</label><br>
@@ -32,4 +34,4 @@
   </div><br>
   <button class="btn btn-primary btn-xs" data-book="{{book.id}}" data-user="{{book.user_id}}" id="update-book-btn">Update This Book</button>
 </div>
-<!--</form>-->
+</form>
