changed styling and layout with all users button at bottom

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,7 +63,7 @@ input[type='checkbox'] {
   width: 300px;
   ;
 }
-#change-pass-btn, #delete-account-btn {
+#change-pass-btn, #view-users-btn, #delete-account-btn {
   margin-left: 50px;
   background-color: lightgreen;
   color: #555555;
