cleaned up old functions in profile, books.js

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -68,6 +68,12 @@ input[type='checkbox'] {
   background-color: lightgreen;
   color: #555555;
 }
+
+.lefty {
+  margin-left: 100px;
+  margin-bottom: 20px;
+}
+
 .row-centered {
   text-align: center;
 }
