--- a/app/assets/javascripts/templates/bookForm.hbs
+++ b/app/assets/javascripts/templates/bookForm.hbs
@@ -1,5 +1,5 @@
 <div class="indent">
-<h4>To Edit This Book, Just Die, Fill In Field(s) and Click 'Update'</h4>
+<h4>To Edit This Book, Just Fill In Field(s) and Click 'Update'</h4>
 <form  action="/" id="book-form">
 <p class="remember">All fields but 'title' and 'condition' are optional, but the more fields added, the better the chance of trading a book</p><br>
 </div>
