--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,7 +69,7 @@ input[type='checkbox'] {
   color: #555555;
 }
 
-.lefty {
+.lefty, #new-book-btn {
   margin-left: 100px;
   margin-bottom: 20px;
 }
