made small change to homepage and templates

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,7 +69,7 @@ input[type='checkbox'] {
 }
 #change-pass-btn, #view-users-btn, #delete-account-btn {
   margin-left: 50px;
-  background-color: lightgreen;
+  background-color: #FF8C00;
   color: #555555;
 }
 
