--- a/app/views/home/logged_in.html.erb
+++ b/app/views/home/logged_in.html.erb
@@ -1,5 +1,5 @@
 <div id="homepage-header">
-<h2>Homepage of <%= current_user.first_name %></h2>
+<h2><%= current_user.first_name %>'s Homepage</h2>
 </div>
 
   <div id="display-area"></div>
